add junit report files

--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -22,7 +22,8 @@ pipelines:
             script:
               - composer require typo3/cms-core:8.7.*
               - export typo3DatabaseName=test typo3DatabaseHost=127.0.0.1 typo3DatabaseUsername=root typo3DatabasePassword=password
-              - composer test
+              - composer test:unit -- --log-junit test-reports/unit.xml
+              - composer test:functional -- --log-junit test-reports/functional.xml
         - step:
             name: TYPO3 8 with PHP 7.2
             image: chialab/php:7.2
@@ -33,7 +34,8 @@ pipelines:
             script:
               - composer require typo3/cms-core:8.7.*
               - export typo3DatabaseName=test typo3DatabaseHost=127.0.0.1 typo3DatabaseUsername=root typo3DatabasePassword=password
-              - composer test
+              - composer test:unit -- --log-junit test-reports/unit.xml
+              - composer test:functional -- --log-junit test-reports/functional.xml
         - step:
             name: TYPO3 9 with PHP 7.2
             image: chialab/php:7.2
@@ -44,4 +46,5 @@ pipelines:
             script:
               - composer require typo3/cms-core:9.5.*
               - export typo3DatabaseName=test typo3DatabaseHost=127.0.0.1 typo3DatabaseUsername=root typo3DatabasePassword=password
-              - composer test
+              - composer test:unit -- --log-junit test-reports/unit.xml
+              - composer test:functional -- --log-junit test-reports/functional.xml
