--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
         }
     ],
     "require": {
-        "php": "7.1.* || 7.2.* || 7.3.*",
+        "php": "7.1.* || 7.2.*",
         "ext-json": "*",
         "typo3/cms-core": "~8.7.7 || ~9.5.0"
     },
