add variants with lowest possible versions

--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -13,38 +13,62 @@ pipelines:
   default:
     - parallel:
         - step:
-            name: TYPO3 8 with PHP 7.1
+            name: TYPO3 8.7 (lowest) PHP 7.1
             image: chialab/php:7.1
             caches:
               - composer
             services:
               - mysql
             script:
-              - composer require typo3/cms-core:8.7.*
+              - composer require typo3/cms-core:8.7.* --no-interaction --update-with-all-dependencies --prefer-lowest
               - export typo3DatabaseName=test typo3DatabaseHost=127.0.0.1 typo3DatabaseUsername=root typo3DatabasePassword=password
               - composer test:unit -- --log-junit test-reports/unit.xml
               - composer test:functional -- --log-junit test-reports/functional.xml
         - step:
-            name: TYPO3 8 with PHP 7.2
+            name: TYPO3 8.7 (highest) PHP 7.1
+            image: chialab/php:7.1
+            caches:
+              - composer
+            services:
+              - mysql
+            script:
+              - composer require typo3/cms-core:8.7.* --no-interaction --update-with-all-dependencies
+              - export typo3DatabaseName=test typo3DatabaseHost=127.0.0.1 typo3DatabaseUsername=root typo3DatabasePassword=password
+              - composer test:unit -- --log-junit test-reports/unit.xml
+              - composer test:functional -- --log-junit test-reports/functional.xml
+        - step:
+            name: TYPO3 8.7 (highest) PHP 7.2
             image: chialab/php:7.2
             caches:
               - composer
             services:
               - mysql
             script:
-              - composer require typo3/cms-core:8.7.*
+              - composer require typo3/cms-core:8.7.* --no-interaction --update-with-all-dependencies
               - export typo3DatabaseName=test typo3DatabaseHost=127.0.0.1 typo3DatabaseUsername=root typo3DatabasePassword=password
               - composer test:unit -- --log-junit test-reports/unit.xml
               - composer test:functional -- --log-junit test-reports/functional.xml
         - step:
-            name: TYPO3 9 with PHP 7.2
+            name: TYPO3 9.5 (lowest) with PHP 7.2
             image: chialab/php:7.2
             caches:
               - composer
             services:
               - mysql
             script:
-              - composer require typo3/cms-core:9.5.*
+              - composer require typo3/cms-core:9.5.* --no-interaction --update-with-all-dependencies --prefer-lowest
+              - export typo3DatabaseName=test typo3DatabaseHost=127.0.0.1 typo3DatabaseUsername=root typo3DatabasePassword=password
+              - composer test:unit -- --log-junit test-reports/unit.xml
+              - composer test:functional -- --log-junit test-reports/functional.xml
+        - step:
+            name: TYPO3 9.5 (highest) with PHP 7.2
+            image: chialab/php:7.2
+            caches:
+              - composer
+            services:
+              - mysql
+            script:
+              - composer require typo3/cms-core:9.5.* --no-interaction --update-with-all-dependencies
               - export typo3DatabaseName=test typo3DatabaseHost=127.0.0.1 typo3DatabaseUsername=root typo3DatabasePassword=password
               - composer test:unit -- --log-junit test-reports/unit.xml
               - composer test:functional -- --log-junit test-reports/functional.xml
