make the cms installer a dev dependency and increase the min requirement
Version 1.4.0 creates a warning during tests which seems to break them.

Also adding it as a conflict might be too much since if someone gets
this extension installed than it will work. It's just for the "lowest"
test where it makes problems.

--- a/composer.json
+++ b/composer.json
@@ -24,10 +24,8 @@
     },
     "require-dev": {
         "nimut/testing-framework": "^4.1",
-        "phpunit/phpunit": "^6.5"
-    },
-    "conflict": {
-        "typo3/cms-composer-installers": "<1.4"
+        "phpunit/phpunit": "^6.5",
+        "typo3/cms-composer-installers": ">=1.4.1"
     },
     "autoload": {
         "psr-4": {
