--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -20,7 +20,7 @@ pipelines:
             services:
               - mysql
             script:
-              - composer require typo3/cms-core:8.7.* --no-interaction --update-with-all-dependencies --prefer-lowest
+              - composer require typo3/cms-core:^8.7.10 --no-interaction --update-with-all-dependencies --prefer-lowest
               - export typo3DatabaseName=test typo3DatabaseHost=127.0.0.1 typo3DatabaseUsername=root typo3DatabasePassword=password
               - composer test:unit -- --log-junit test-reports/unit.xml
               - composer test:functional -- --log-junit test-reports/functional.xml
@@ -32,7 +32,7 @@ pipelines:
             services:
               - mysql
             script:
-              - composer require typo3/cms-core:8.7.* --no-interaction --update-with-all-dependencies
+              - composer require typo3/cms-core:^8.7.10 --no-interaction --update-with-all-dependencies
               - export typo3DatabaseName=test typo3DatabaseHost=127.0.0.1 typo3DatabaseUsername=root typo3DatabasePassword=password
               - composer test:unit -- --log-junit test-reports/unit.xml
               - composer test:functional -- --log-junit test-reports/functional.xml
@@ -44,7 +44,7 @@ pipelines:
             services:
               - mysql
             script:
-              - composer require typo3/cms-core:8.7.* --no-interaction --update-with-all-dependencies
+              - composer require typo3/cms-core:^8.7.10 --no-interaction --update-with-all-dependencies
               - export typo3DatabaseName=test typo3DatabaseHost=127.0.0.1 typo3DatabaseUsername=root typo3DatabasePassword=password
               - composer test:unit -- --log-junit test-reports/unit.xml
               - composer test:functional -- --log-junit test-reports/functional.xml
