--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
     "require": {
         "php": "7.1.* || 7.2.*",
         "ext-json": "*",
+        "james-heinrich/getid3": "^1.9",
         "typo3/cms-core": "~8.7.10 || ~9.5.0"
     },
     "require-dev": {
