--- a/composer.json
+++ b/composer.json
@@ -26,6 +26,7 @@
     "require-dev": {
         "nimut/testing-framework": "^4.1",
         "phpunit/phpunit": "^6.5",
+        "symplify/easy-coding-standard": "^12.1",
         "typo3/cms-composer-installers": ">=1.4.1"
     },
     "autoload": {
@@ -41,7 +42,11 @@
     "config": {
         "sort-packages": true,
         "vendor-dir": ".Build/vendor",
-        "bin-dir": ".Build/bin"
+        "bin-dir": ".Build/bin",
+        "allow-plugins": {
+            "typo3/cms-composer-installers": true,
+            "typo3/class-alias-loader": true
+        }
     },
     "extra": {
         "typo3/cms": {
@@ -57,6 +62,8 @@
         "cc": [
             "rm -rf .Build/typo3temp/var/tests/"
         ],
+        "cs:check": "ecs check",
+        "cs:fix": "ecs check --fix",
         "db:stop": [
             "docker rm --force --volumes `basename $PWD`_db || true"
         ],
