--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,10 @@
     },
     "require-dev": {
         "nimut/testing-framework": "^4.1",
+        "phpstan/extension-installer": "^1.3",
+        "phpstan/phpstan": "^1.10",
         "phpunit/phpunit": "^6.5",
+        "saschaegerer/phpstan-typo3": "^1.1",
         "symplify/easy-coding-standard": "^12.1",
         "typo3/cms-composer-installers": ">=1.4.1"
     },
@@ -45,7 +48,8 @@
         "bin-dir": ".Build/bin",
         "allow-plugins": {
             "typo3/cms-composer-installers": true,
-            "typo3/class-alias-loader": true
+            "typo3/class-alias-loader": true,
+            "phpstan/extension-installer": true
         }
     },
     "extra": {
@@ -59,6 +63,7 @@
             "mkdir -p .Build/typo3conf/ext",
             "ln -s ../../../ .Build/typo3conf/ext/video || true"
         ],
+        "analyze": "phpstan --memory-limit=256m",
         "cc": [
             "rm -rf .Build/typo3temp/var/tests/"
         ],
