Add Rector and apply PHP_56 set list

--- a/.github/workflows/lint_test_pull_requests.yaml
+++ b/.github/workflows/lint_test_pull_requests.yaml
@@ -19,6 +19,8 @@ jobs:
             command: analyze
           - name: PHPUnit
             command: test:unit
+          - name: Rector
+            command: 'rector -- --dry-run'
 
     name: ${{ matrix.composer-command.name }}
 
