--- a/composer.json
+++ b/composer.json
@@ -69,6 +69,7 @@
         "phpstan/phpstan": "^1.10",
         "phpunit/phpunit": "^9.6",
         "saschaegerer/phpstan-typo3": "^1.1",
+        "ssch/typo3-rector": "^1.3",
         "symplify/easy-coding-standard": "^12.1",
         "typo3/cms-composer-installers": ">=1.4.1"
     },
@@ -119,6 +120,7 @@
         "db:stop": [
             "docker rm --force --volumes `basename $PWD`_db || true"
         ],
+        "rector": "rector",
         "test": [
             "@test:unit",
             "@test:functional"
