--- a/phpstan-baseline.neon
+++ b/phpstan-baseline.neon
@@ -643,12 +643,12 @@ parameters:
 		-
 			message: "#^Else branch is unreachable because ternary operator condition is always true\\.$#"
 			count: 2
-			path: Classes/Processing/VideoProcessor.php
+			path: Classes/Processing/VideoTaskProcessor.php
 
 		-
-			message: "#^Method Hn\\\\Video\\\\Processing\\\\VideoProcessor\\:\\:getConverter\\(\\) should return Hn\\\\Video\\\\Converter\\\\VideoConverterInterface but returns object\\.$#"
+			message: "#^Method Hn\\\\Video\\\\Processing\\\\VideoTaskProcessor\\:\\:getConverter\\(\\) should return Hn\\\\Video\\\\Converter\\\\VideoConverterInterface but returns object\\.$#"
 			count: 1
-			path: Classes/Processing/VideoProcessor.php
+			path: Classes/Processing/VideoTaskProcessor.php
 
 		-
 			message: "#^Cannot call method fetch\\(\\) on Doctrine\\\\DBAL\\\\Driver\\\\Statement\\|int\\.$#"
@@ -933,7 +933,7 @@ parameters:
 		-
 			message: "#^Call to an undefined method Hn\\\\Video\\\\Converter\\\\VideoConverterInterface\\|PHPUnit\\\\Framework\\\\MockObject\\\\MockObject\\:\\:expects\\(\\)\\.$#"
 			count: 10
-			path: Tests/Functional/Processing/VideoProcessorTest.php
+			path: Tests/Functional/Processing/VideoTaskProcessorTest.php
 
 		-
 			message: "#^Call to an undefined method TYPO3\\\\CMS\\\\Core\\\\Resource\\\\Processing\\\\TaskInterface\\:\\:getUid\\(\\)\\.$#"
